--- a/resource/style/styleFA.css
+++ b/resource/style/styleFA.css
@@ -1,12 +1,12 @@
 section#sidepanel-PersianUIFix
 {
   direction:rtl;
-  font-family:Calibri,'Segoe UI',Tahoma;
+  font-family:webfontregular,Calibri,'Segoe UI',Tahoma;
 }
 
 body,label.control-label,.tooltip
 {
-  font-family:'Segoe UI',Tahoma,sans-serif!important;
+  font-family:webfontregular,'Segoe UI',Tahoma,sans-serif!important;
 }
 
 .feed-issue .type,.feed-notifications .title,.notification-detail.panel.show h2
@@ -210,6 +210,51 @@ span.restriction-item-badge.restriction-item-badge-allowed,.venue-image-dialog .
   direction:rtl;
   text-align:right;
 }
+
+/* Menu Dropdown Layout */
+.toolbar-submenu
+{
+  direction: rtl;
+}
+
+.toolbar .group-title
+{
+  margin-right: 40px;
+  margin-left: inherit !important;
+}
+
+#edit-buttons .toolbar-group .toolbar-group-item {
+  padding-right: 40px;
+  padding-left: inherit;
+}
+
+#edit-buttons .toolbar-group .toolbar-group-item .item-icon {
+  right: 0;
+  left: inherit;
+}
+
+#edit-buttons .toolbar-group .toolbar-group-item .menu-title {
+  padding-right: 0;
+  padding-left: 15px;
+}
+
+#edit-buttons .toolbar-group-map-comments .dropdown-menu .drawing-controls {
+  right: 2px;
+  left: inherit;
+}
+
+.toolbar-group-drawing menu.dropdown-menu {
+  left: -117px !important;
+}
+
+.toolbar-group-venues menu.dropdown-menu {
+  left: -148px !important;
+}
+
+.toolbar-group-map-comments menu.dropdown-menu {
+  left: -10px !important;
+}
+/* Menu Dropdown Layout */
 
 div#WMEFP-UR-ALLPM
 {
