--- a/resource/style/styleFA.css
+++ b/resource/style/styleFA.css
@@ -19,7 +19,7 @@ body,label.control-label,.tooltip
   font-weight:700;
 }
 
-.problem-edit,.title,.user-about,div#segment-edit-general,div#landmark-edit-general,.map-comment-feature-editor div.tab-content,.camera div.tab-content,.settings.side-panel-section,.direction-message,.save-popover,p.message,span.street,ul.feed-list,ul.result-list,.modal-content,.archive-panel,.selection.selection-icon,.tabs-container,.place-update,.menu,ul.nav.nav-tabs,.notification-detail.panel.show,.segment-details,.alert-danger,.attributes-form,.image-view
+.problem-edit,.title,.user-about,div#segment-edit-general,div#landmark-edit-general,.map-comment-feature-editor div.tab-content,.camera div.tab-content,.settings.side-panel-section,.direction-message,.save-popover,p.message,span.street,ul.feed-list,ul.result-list,.modal-content,.archive-panel,.selection.selection-icon,.tabs-container,.place-update,.menu,ul.nav.nav-tabs,.notification-detail.panel.show,.segment-details,.alert-danger,.attributes-form,.image-view,div#node-edit-general
 {
   direction:rtl;
 }
@@ -227,35 +227,42 @@ span.restriction-item-badge.restriction-item-badge-allowed,.venue-image-dialog .
   margin-left: inherit !important;
 }
 
-#edit-buttons .toolbar-group .toolbar-group-item {
+#edit-buttons .toolbar-group .toolbar-group-item
+{
   padding-right: 40px;
   padding-left: inherit;
 }
 
-#edit-buttons .toolbar-group .toolbar-group-item .item-icon {
+#edit-buttons .toolbar-group .toolbar-group-item .item-icon
+{
   right: 0;
   left: inherit;
 }
 
-#edit-buttons .toolbar-group .toolbar-group-item .menu-title {
+#edit-buttons .toolbar-group .toolbar-group-item .menu-title
+{
   padding-right: 0;
   padding-left: 15px;
 }
 
-#edit-buttons .toolbar-group-map-comments .dropdown-menu .drawing-controls {
+#edit-buttons .toolbar-group-map-comments .dropdown-menu .drawing-controls
+{
   right: 2px;
   left: inherit;
 }
 
-.toolbar-group-drawing menu.dropdown-menu {
+.toolbar-group-drawing menu.dropdown-menu
+{
   left: -117px !important;
 }
 
-.toolbar-group-venues menu.dropdown-menu {
+.toolbar-group-venues menu.dropdown-menu
+{
   left: -148px !important;
 }
 
-.toolbar-group-map-comments menu.dropdown-menu {
+.toolbar-group-map-comments menu.dropdown-menu
+{
   left: -10px !important;
 }
 /* Menu Dropdown Layout */
