--- a/resource/style/styleFA.css
+++ b/resource/style/styleFA.css
@@ -19,7 +19,7 @@ body,label.control-label,.tooltip
   font-weight:700;
 }
 
-.problem-edit,.title,.user-about,div#segment-edit-general,div#landmark-edit-general,.map-comment-feature-editor div.tab-content,.camera div.tab-content,.settings.side-panel-section,.direction-message,.save-popover,p.message,span.street,ul.feed-list,ul.result-list,.modal-content,.archive-panel,.selection.selection-icon,.tabs-container,.place-update,.menu,ul.nav.nav-tabs,.notification-detail.panel.show,.segment-details,.alert-danger,.attributes-form,.image-view,div#node-edit-general,.topbar.loading-indicator
+.problem-edit,.title,.user-about,div#segment-edit-general,div#landmark-edit-general,.map-comment-feature-editor div.tab-content,.camera div.tab-content,.settings.side-panel-section,.direction-message,.save-popover,p.message,span.street,ul.feed-list,ul.result-list,.modal-content,.archive-panel,.selection.selection-icon,.tabs-container,.place-update,.menu,ul.nav.nav-tabs,.notification-detail.panel.show,.segment-details,.alert-danger,.attributes-form,.image-view,div#node-edit-general,.topbar .loading-indicator
 {
   direction:rtl;
 }
@@ -227,6 +227,24 @@ span.restriction-item-badge.restriction-item-badge-allowed,.venue-image-dialog .
   margin-left:inherit!important;
 }
 
+.toolbar-group-drawing menu.dropdown-menu
+{
+  right:10px;
+  left:inherit!important;
+}
+
+.toolbar-group-venues menu.dropdown-menu
+{
+  right:10px;
+  left:inherit!important;
+}
+
+.toolbar-group-map-comments menu.dropdown-menu
+{
+  right:10px;
+  left:inherit!important;
+}
+
 #edit-buttons .toolbar-group .toolbar-group-item
 {
   padding-right:40px;
@@ -249,21 +267,6 @@ span.restriction-item-badge.restriction-item-badge-allowed,.venue-image-dialog .
 {
   right:2px;
   left:inherit;
-}
-
-.toolbar-group-drawing menu.dropdown-menu
-{
-  left:-117px!important;
-}
-
-.toolbar-group-venues menu.dropdown-menu
-{
-  left:-148px!important;
-}
-
-.toolbar-group-map-comments menu.dropdown-menu
-{
-  left:-10px!important;
 }
 /* Menu Dropdown Layout */
 
